Rewrote fetch related functions to be asyncronous. Implemented error message when wrong auth. Now there are three auth states: unauthed(not logged in), bad-authed(wrong credentials) and authed(all good) and profile, auth and entry display messages according to that state. Entry displays message when entry submitted. Added more info in Intro. Reordered grid(I still have to fix that a bit). Cropped correctly the image.

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
     padding: 20px 0px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(5, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     grid-column-gap: 10px;
     grid-row-gap: 10px;
 }
@@ -14,16 +14,16 @@
     grid-area: 1 / 3 / 2 / 4;
 }
 .profile {
-    grid-area: 2 / 3 / 4 / 4;
+    grid-area: 2 / 3 / 3 / 4;
 }
 .signIn {
-    grid-area: 2 / 1 / 4 / 3;
+    grid-area: 2 / 1 / 3 / 3;
 }
 .friend {
-    grid-area: 4 / 1 / 6 / 2;
+    grid-area: 3 / 1 / 4 / 2;
 }
 .entry {
-    grid-area: 4 / 2 / 6 / 4;
+    grid-area: 3 / 2 / 4 / 4;
 }
 
 .intro {
@@ -85,6 +85,10 @@
     color: #eeba2c;
     box-shadow: 0 5px rgb(238 186 44 / 54%);
     transform: translateY(4px);
+}
+
+.bad-auth {
+    color: red;
 }
 
 .profile {
